--- a/sidepanel.html
+++ b/sidepanel.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Text Sender</title>
     <link rel="stylesheet" href="./css/sidepanel.css">
@@ -11,7 +11,6 @@
       <h1 id="title">S c i R e a d e r </h1>
     </div>
   </div>
-
     <h1>Text Sender Extension</h1>
   </body>
 </html>
