renamed to scicompanion

--- a/sidepanel.html
+++ b/sidepanel.html
@@ -8,7 +8,7 @@
   <body>
   <div id="headercolor" class="container">
     <div id="header">
-      <h1 id="title">S c i R e a d e r </h1>
+      <h1 id="title">S c i C o m - p a n i o n</h1>
     </div>
   </div>
     <h1>Text Sender Extension</h1>
