--- a/sidepanel.html
+++ b/sidepanel.html
@@ -8,9 +8,9 @@
   <body>
   <div id="headercolor" class="container">
     <div id="header">
-      <h1 id="title">S c i C o m - p a n i o n</h1>
+      <h1 id="title">S c i C o m m - p a n i o n</h1>
     </div>
   </div>
-    <h1>Text Sender Extension</h1>
+  <div id="response"></div>
   </body>
 </html>
