--- a/sidepanel.html
+++ b/sidepanel.html
@@ -11,6 +11,10 @@
       <h1 id="title">S c i C o m m - p a n i o n</h1>
     </div>
   </div>
+
+  <div class="card">
   <div id="response"></div>
+  </div>
+
   </body>
 </html>
