--- a/sidepanel.html
+++ b/sidepanel.html
@@ -9,6 +9,7 @@
   <div id="headercolor" class="container">
     <div id="header">
       <h1 id="title">S c i C o m m - p a n i o n</h1>
+      <h2 id="desc"> Jar-gon away!</h2>
     </div>
   </div>
 
