Added query history to html and added context menu option for finding more references, finding references code does not produce link

--- a/sidepanel.html
+++ b/sidepanel.html
@@ -12,9 +12,16 @@
     </div>
   </div>
 
+  <h4>Current Query</h4>
   <div class="card">
-  <div id="response"></div>
+    <div id="response"></div>
+    <div id="references"></div>
   </div>
+  <br>
+  <h4>Query History</h4>
+  <div id="history"></div>
+
+
 
   </body>
 </html>
